# evade-cmake

./: CMakeLists.txt  README.md  package.json
cmake/: evadeConfig.cmake.in  evadeapiConfig.cmake.in
include/evade/: api.h
scripts/: build  build.ps1
